--- a/front-end-responsive.html
+++ b/front-end-responsive.html
@@ -14,6 +14,7 @@ http://nicholaskrause.github.io/ign_code_foo_2016/
 
 			nicholasthekrause@gmail.com
 			http://LittleOverLord.com/
+			http://www.littleoverlord.com/portfolio.html
 -->
 		<title>IGN Articles and Videos | Nick Krause</title>
 		<meta name="description" content="IGN is your site for Xbox One, PS4, PC, Wii-U, Xbox 360, PS3, Wii, 3DS, PS Vita &amp; iPhone games with expert reviews, news, previews, trailers, cheat codes, wiki guides &amp; walkthroughs" />
@@ -58,7 +59,9 @@ http://nicholaskrause.github.io/ign_code_foo_2016/
 			<section class="row"><div class="columns small-12"><hr class="jeweled"></div></section>
 		</section>
 
-		<section class="row"><div class="columns small-12 text-center"><hr class="jeweled"><a href="http://nicholaskrause.github.io/ign_code_foo_2016"><img src="nk_lol.png"></a></div></section>
+		<section class="row"><div class="columns small-12 text-center"><hr class="jeweled"><a href="http://nicholaskrause.github.io/ign_code_foo_2016"><img src="nk_lol.png"></a>
+		<br><a href="http://www.littleoverlord.com/portfolio.html">Interactive Portfolio</a>
+		</div></section>
 	
 <!--  Begin Templates -->
 <template id="js-catg--templ__articles">
