--- a/front-end-responsive.html
+++ b/front-end-responsive.html
@@ -60,7 +60,7 @@ http://nicholaskrause.github.io/ign_code_foo_2016/
 		</section>
 
 		<section class="row"><div class="columns small-12 text-center"><hr class="jeweled"><a href="http://nicholaskrause.github.io/ign_code_foo_2016"><img src="nk_lol.png"></a>
-		<br><a href="http://www.littleoverlord.com/portfolio.html">Interactive Portfolio</a>
+		<br><a href="http://www.littleoverlord.com/portfolio.html">Interactive Portfolio</a><br>
 		</div></section>
 	
 <!--  Begin Templates -->
